@@ -31,6 +31,7 @@ Zope Changes
 
       - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot
 
+      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership
 
   Zope 2.10.0 beta 1 (2006/05/30)
 
